@@ -104,6 +104,7 @@
     * 0244 New features for WATO page Backup & Restore...
     * 0382 Active HTTP check now supports multiline regexp matching...
     * 0112 Explicit mapping of clustered services can now be done with WATO...
+    * 0437 Convert WATO rule for debug_log into simple Checkbox...
     * 0057 FIX: Fix exception in WATO host editor on custom tag without topic...
     * 0241 FIX: Improved sorting of WATO folders in dropdown menu...
     * 0019 FIX: Fixed wording in WATO rule for MSSQL check
